# searchable-pdf

./: .dockerignore  .gitignore  Dockerfile  README.md
.github/workflows/: deploy-aws.yml
backend/: .env.example  README.md  pyproject.toml
backend/app/: cli.py  config.py  docstrange.py  main.py  pdf_embedder.py
backend/scripts/: remove_searchable_text.py
backend/tests/: calibrate.py  test_pdf_embedder.py  test_searchability.py
deploy/: apprunner-create-production.json  apprunner-create.json  apprunner-instance-secrets-policy.json  create-secret.sh  create-service-only.sh  deploy.sh  github-actions-deploy-policy.json  github-oidc-trust-policy.json
frontend/: index.html
frontend/src/: App.css  App.tsx  index.css
